# ord_rxn_converter

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  intro.rst  modules.rst  ord_rxn_converter.rst  quickstart.rst
src/ord_rxn_converter/: conditions_module.py  inputs_module.py  utility_functions.py  utility_functions_module.py  workups_module.py
src/ord_rxn_converter.egg-info/: PKG-INFO  SOURCES.txt
test/: test_dataset_module.py
