
[project]
name = "ord_rxn_converter"
version = "0.1.1"
description = "Package for extracting chemical reaction serialized (Google Protocol Buffers mechanism) in Open Reaction Database (ORD) schema to relational database (RDB) and Resource Descriptive Framework (RDF)."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
  { name="Quynh D. Tran", email="qdt@case.edu" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "ord_schema",
  "protobuf",
  "pandas",
  "rdkit",
]

[project.urls]
Homepage = "https://github.com/cwru-sdle/ord_rxn_converter"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where=["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
python_files = "test_*.py"